// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event actions should create an action to load an event 1`] = `
Object {
  "payload": Object {
    "navigateToEventScreen": true,
    "pk": 1,
  },
  "type": "EVENT_EVENT",
}
`;

exports[`event actions should create an action to load an event without opening the event screen 1`] = `
Object {
  "payload": Object {
    "navigateToEventScreen": false,
    "pk": 1,
  },
  "type": "EVENT_EVENT",
}
`;

exports[`event actions should create an action to notify of a completed fetch of an event 1`] = `
Object {
  "type": "EVENT_DONE",
}
`;

exports[`event actions should create an action to notify of a failure fetching an event 1`] = `
Object {
  "type": "EVENT_FAILURE",
}
`;

exports[`event actions should create an action to notify of a success fetch of an event 1`] = `
Object {
  "payload": Object {
    "eventData": "eventData",
    "eventRegistrations": "eventReg",
  },
  "type": "EVENT_SUCCESS",
}
`;

exports[`event actions should create an action to notify of that an event is fetching 1`] = `
Object {
  "type": "EVENT_FETCHING",
}
`;

exports[`event actions should create an action to open the admin screen of the event 1`] = `
Object {
  "type": "EVENT_ADMIN",
}
`;

exports[`event actions should create an action to open the event screen 1`] = `
Object {
  "type": "EVENT_OPEN",
}
`;

exports[`event actions should create an action to update a registration 1`] = `
Object {
  "payload": Object {
    "payment": "no_payment",
    "pk": 1,
    "present": true,
  },
  "type": "EVENT_UPDATE_REGISTRATION",
}
`;
